<resources>
    <string name="app_name">MVPApplication</string>
    <string name="error_something_wrong">Something Is wrong.</string>
    <string name="login_successfully_welcome_to_dashboard">Login Successfully! Welcome To Dashboard</string>
    <string name="username">User Name</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="gender">Gender</string>
    <string name="error_on_register_user">Something Went wrong on Register User.</string>
    <string name="user_does_not_found">User Does Not Found In DB</string>
</resources>